# fft-tracker

./: README.md
128-tracker/: Makefile
128-tracker/back/: CMakeLists.txt  Makefile  Makefile0  Makefile1  main0.cpp  main1.cpp  mc12101-nmpu0.lds  mc12101-nmpu1.lds
128-tracker/front/: CMakeLists.txt  front.cpp  sobel.cpp  sobel.h
128-tracker/model/: CMakeLists.txt
128-tracker/vsmon/: vsimg.cpp
base-tracker/: Makefile  main.cpp  premake5.lua
blur-tracker/: main.cpp  premake5.lua
blur-tracker-2nmc/make_mc12101/: Makefile  Makefile0  Makefile1  mc12101brd-nmc0.cfg  mc12101brd-nmc1.cfg  premake5.lua
blur-tracker-2nmc/make_x86/: Makefile  premake5.lua
blur-tracker-2nmc/src_host/: pc-main.cpp
blur-tracker-2nmc/src_target0/: nm_main0.cpp
blur-tracker-2nmc/src_target1/: nm_main1.cpp
diff-tracker/: Makefile  main.cpp  premake5.lua
had-tracker/: CMakeLists.txt  Makefile  main.cpp
include/: nmassert.h  nmassert.hs  tracker.h
src/common/board/: nm-main.cpp
src/common/host/: pc-main.cpp
src/nm-sim/: comp_imax.asm  nmblas_idamax.asm
src/pc-sim/: nmblas_idamax.c
